test/cases/compile_errors/comptime_decl_name_conflict_resolved.zig
comptime {
    @compileError("should be reached");
}
const comptime_0 = {};

// error
//
// :2:5: error: should be reached
